    for for result set columns with ambiguous numeric characteristics,
    now uses the decimal point character determined by the locale/
    NLS_LANG setting, using an on-first-connect detection of 
    this character.  cx_oracle 5.0.3 or greater is also required
    when using a non-period-decimal-point NLS_LANG setting.
    [ticket:1953].

- declarative
  - An error is raised if __table_args__ is not in tuple
    or dict format, and is not None.  [ticket:1972]

- sqlsoup
  - Added "map_to()" method to SqlSoup, which is a "master"
    method which accepts explicit arguments for each aspect of
    the selectable and mapping, including a base class per
    mapping. [ticket:1975]

  - Mapped selectables used with the map(), with_labels(),
    join() methods no longer put the given argument into the
    internal "cache" dictionary.  Particularly since the
    join() and select() objects are created in the method
    itself this was pretty much a pure memory leaking behavior.

- examples
  - The versioning example now supports detection of changes
    in an associated relationship().

0.6.5
=====
- orm
  - Added a new "lazyload" option "immediateload".
    Issues the usual "lazy" load operation automatically
    as the object is populated.   The use case
    here is when loading objects to be placed in
    an offline cache, or otherwise used after
    the session isn't available, and straight 'select'
    loading, not 'joined' or 'subquery', is desired.
    [ticket:1914]

  - New Query methods: query.label(name), query.as_scalar(),
    return the query's statement as a scalar subquery
    with /without label [ticket:1920];
    query.with_entities(*ent), replaces the SELECT list of 
    the query with new entities. 
    Roughly equivalent to a generative form of query.values()
    which accepts mapped entities as well as column 
    expressions.

  - Fixed recursion bug which could occur when moving
    an object from one reference to another, with 